--- a/src/main/resources/password/pwm/i18n/Message.properties
+++ b/src/main/resources/password/pwm/i18n/Message.properties
@@ -140,7 +140,7 @@ Rule_MinimumAlpha=Minimum Alpha
 Rule_MaximumAlpha=Maximum Alpha
 Rule_MinimumNonAlpha=Minimum Non-Alpha
 Rule_MaximumNonAlpha=Maximum Non-Alpha
-Rule_EnableWordlist=Enable Wordlist
+Rule_EnableWordlist=Enable Word List
 Rule_MinimumStrength=Minimum Strength
 Rule_MaximumConsecutive=Maximum Consecutive
 Rule_CharGroupsValues=Character Group Values
