--- a/src/main/resources/password/pwm/i18n/Health.properties
+++ b/src/main/resources/password/pwm/i18n/Health.properties
@@ -65,14 +65,15 @@ HealthMessage_Java_SmallHeap=Java maximum memory heap size is set to default of 
 HealthMessage_Java_OK=Java platform is operating normally
 HealthMessage_LocalDB_OK=LocalDB and related services are operating correctly
 HealthMessage_LocalDB_BAD=LocalDB is not online. Startup error: %1%
-HealthMessage_LocalDB_NEW=LocalDB status is NEW (loading) state, until LocalDB loads, statistics, online logging, wordlists and other features are disabled
-HealthMessage_LocalDB_CLOSED=LocalDB is CLOSED, statistics, online logging, wordlists and other features are disabled.  Check logs to troubleshoot
+HealthMessage_LocalDB_NEW=LocalDB status is NEW (loading) state, until LocalDB loads, statistics, online logging, word lists and other features are disabled
+HealthMessage_LocalDB_CLOSED=LocalDB is CLOSED, statistics, online logging, word lists and other features are disabled.  Check logs to troubleshoot
 HealthMessage_LocalDBLogger_NOTOPEN=LocalDBLogger is not open, status is %1%
 HealthMessage_LocalDBLogger_HighRecordCount=LocalDBLogger event log record count of %1% records, is more than the configured maximum of %2%.  Excess records are being purged.
 HealthMessage_LocalDBLogger_OldRecordPresent=Oldest LocalDBLogger event log record is %1%, configured maximum is %2%.  Excess records are being purged.
 HealthMessage_ServiceClosed_LocalDBUnavail=unable to start %1% service, LocalDB is not available
 HealthMessage_ServiceClosed_AppReadOnly=unable to start %1% service, application is in read-only mode
 HealthMessage_SMS_SendFailure=Unable to send sms due to error: %1%
+HealthMessage_Wordlist_AutoImportFailure=Configured word list (%1%) failed to import due to error: %2% at timestamp %3%
 HealthStatus_WARN=WARN
 HealthStatus_CAUTION=CAUTION
 HealthStatus_CONFIG=CONFIGURATION
