audit system improvements

--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -112,6 +112,7 @@ Field_Audit_SourceAddress=Source Address
 Field_Audit_SourceHost=Source Host
 Field_Audit_Instance=Instance
 Field_Audit_GUID=Record GUID
+Field_Audit_Narrative=Narrative
 Field_CurrentTime=Current Time
 Field_InstallTime=Install Time
 Field_StartTime=Start Time
@@ -307,3 +308,37 @@ Field_UpTime=Up Time
 Field_SiteURL=Site URL
 Field_InstanceID=Instance ID
 Field_ChaiAPIVersion=Chai API Version
+EventLog_Narrative_Startup=@PwmAppName@ has started up
+EventLog_Narrative_Shutdown=@PwmAppName@ has been shutdown
+EventLog_Narrative_FatalEvent=A fatal event has occurred; data: %message%
+EventLog_Narrative_ModifyConfiguration=%perpetratorID% (%perpetratorDN%) has modified the configuration
+EventLog_Narrative_IntruderAttempt=Non user-specific intruder attempt (Details: %message%)
+EventLog_Narrative_IntruderLockout=Non user-specific intruder lockout (Details: %message%)
+EventLog_Narrative_ActivateUser=%perpetratorID% (%perpetratorDN%) has activated their account
+EventLog_Narrative_Authenticate=%perpetratorID% (%perpetratorDN%) has authenticated
+EventLog_Narrative_AgreementPassed=%perpetratorID% (%perpetratorDN%) has agreed to agreement text
+EventLog_Narrative_ChangePassword=%perpetratorID% (%perpetratorDN%) has changed their password
+EventLog_Narrative_UnlockPassword=%perpetratorID% (%perpetratorDN%) has unlocked their password
+EventLog_Narrative_CreateUser=%perpetratorID% (%targetDN%) has completed self registration
+EventLog_Narrative_HelpdeskAction=%targetID% (%targetDN%) had an action invoked by help desk operator %perpetratorID% (%perpetratorDN%), details: %message%
+EventLog_Narrative_HelpdeskClearResponses=Stored responses for %targetID% (%targetDN%) cleared by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskClearOtpSecret=OTP secret for %targetID% (%targetDN%) cleared by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskSetPassword=Password for %targetID% (%targetDN%) set by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskUnlockPassword=password has be unlocked for %targetID% (%targetDN%) by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskDeleteUser=%targetID% (%targetDN%) has been deleted by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskViewDetail=Details of %targetID% (%targetDN%) have been viewed by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskVerifyOtp=OTP secret for %targetID% (%targetDN%) verified by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskVerifyOtpIncorrect=OTP secret verification for %targetID% (%targetDN%) failure by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskVerifyToken=Token verified for %targetID% (%targetDN%) by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskVerifyTokenIncorrect=Incorrect token verification %targetID% (%targetDN%) by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskVerifyAttributes=Attributes for %targetID% (%targetDN%) verified by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_HelpdeskVerifyAttributesIncorrect=Attributes for %targetID% (%targetDN%) verified incorrect by help desk operator %perpetratorID% (%perpetratorDN%)
+EventLog_Narrative_IntruderUserLock=%perpetratorID% (%perpetratorDN%) account has been intruder locked
+EventLog_Narrative_IntruderUserAttempt=%perpetratorID% (%perpetratorDN%) account has had an invalid login attempt (intruder attempt)
+EventLog_Narrative_TokenIssued=A token has been issued
+EventLog_Narrative_TokenClaimed=A token has been claimed
+EventLog_Narrative_ClearResponses=%perpetratorID% (%perpetratorDN%) has cleared their own stored responses
+EventLog_Narrative_RecoverPassword=%perpetratorID% (%perpetratorDN%) has verified their identity via forgotten password
+EventLog_Narrative_SetupResponses=%perpetratorID% (%perpetratorDN%) has saved their own stored responses
+Eventlog_Narrative_SetupOtpSecret=%perpetratorID% (%perpetratorDN%) has completed an OTP enrollment
+EventLog_Narrative_UpdateProfile=%perpetratorID% (%perpetratorDN%) has updated their profile data
