--- a/src/main/resources/password/pwm/i18n/Message.properties
+++ b/src/main/resources/password/pwm/i18n/Message.properties
@@ -45,7 +45,8 @@ EventLog_HelpdeskVerifyToken=Helpdesk Verify Token
 EventLog_HelpdeskVerifyTokenIncorrect=Helpdesk Incorrect Token Verify
 EventLog_HelpdeskVerifyAttributes=Helpdesk Verify Attributes
 EventLog_HelpdeskVerifyAttributesIncorrect=Helpdesk Incorrect Attributes Verify
-EventLog_IntruderUser=Intruder User Lockout
+EventLog_IntruderUserAttempt=Intruder User Attempt
+EventLog_IntruderUserLock=Intruder User Lockout
 EventLog_TokenIssued=Token Issued
 EventLog_TokenClaimed=Token Claimed
 EventLog_ClearResponses=Clear Responses
