--- a/src/main/resources/password/pwm/i18n/Message_zh_TW.properties
+++ b/src/main/resources/password/pwm/i18n/Message_zh_TW.properties
@@ -40,7 +40,7 @@ EventLog_HelpdeskUnlockPassword=\u670d\u52d9\u53f0\u89e3\u9664\u9396\u5b9a\u5bc6
 EventLog_HelpdeskDeleteUser=\u670d\u52d9\u53f0\u522a\u9664\u4f7f\u7528\u8005
 EventLog_HelpdeskViewDetail=\u670d\u52d9\u53f0\u6aa2\u8996\u8a73\u7d30\u8cc7\u6599
 EventLog_HelpdeskVerifyOtp=\u670d\u52d9\u53f0\u9a57\u8b49 OTP
-EventLog_IntruderUser=\u4fb5\u5165\u8005\u4f7f\u7528\u8005\u9396\u5b9a
+EventLog_IntruderUserLock=\u4fb5\u5165\u8005\u4f7f\u7528\u8005\u9396\u5b9a
 EventLog_TokenIssued=\u5df2\u7c3d\u767c\u8a18\u865f
 EventLog_TokenClaimed=\u5df2\u8981\u6c42\u8a18\u865f
 EventLog_ClearResponses=\u6e05\u9664\u56de\u61c9
