--- a/src/main/resources/password/pwm/i18n/Error.properties
+++ b/src/main/resources/password/pwm/i18n/Error.properties
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=No profile is assigned for this operation.
 Error_StartupError=An error occurred while starting the application.  Check the log files for information.
 Error_EnvironmentError=An error with the application environment has prevented the application from starting.
 Error_ApplicationNotRunning=This functionality is not available until the application configuration is restricted.
+Error_EmailSendFailure=Error sending email item %1%, error: %2%
 
 Error_RemoteErrorValue=Remote Error: %1%
 
