--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -201,6 +201,8 @@ Setting_Description_captcha.recaptcha.publicKey=Public reCAPTCHA key.  If blank 
 Setting_Description_captcha.skip.cookie=Allows for skipping the captcha request if a known browser cookie value is held by the browser the cookie is stored in a cookie named 'captcha-key'.  If the value is correct,then the captcha check is skipped.  The cookie value is stored in the browser after a successful captcha check.<br/><br/>If blank, then no cookie will be read/stored.  If set to 'INSTANCEID', then the instanceID is used.  If set to any other value, then the literal value will be used.
 Setting_Description_captcha.skip.param=Allows for skipping the captcha request if a known parameter is passed as a request parameter with a key of "skipCaptcha".   This is useful for "internal" clients / links where the captcha is unneccessary.<br/><br/>For example, if the value is 'okay', a request to\:<br/><br/><i>/public/forgottenpassword?skipCaptcha\=okay</i><br/><br/>would cause captcha to be bypassed.
 Setting_Description_cas.clearPassUrl=For <a href\="http\://www.jasig.org/cas">CAS</a> authentication integration, enter the ClearPass url here.  If blank, CAS authentication integration will be disabled.<br/><br/>You will also need to edit the <i>WEB-INF/web.xml</i> file to enable CAS integration.  Uncomment the section for the CAS servlet filters, and modify the CAS servlet parameters as appropriate for your configuration.
+Setting_Description_cas.clearPass.key=<a href\="https://apereo.github.io/cas/4.2.x/integration/ClearPass.html">ClearPass</a> encryption key
+Setting_Description_cas.clearPass.alg=The algorithm used by the encryption key
 Setting_Description_challenge.allowDuplicateResponses=Control if each response is required to be unique
 Setting_Description_challenge.allowSetup.queryMatch=Permission used to determine if a user is a permitted to configure challenges.  The user must be returned during this ldap query or else the user will not be permitted to configure challenges.
 Setting_Description_challenge.allowUnlock=Allow unlock during forgotten password.  If true, and if the user's account is locked due to too many invalid login attempts, and the user's password is not expired, then the user will be given a chance to unlock their account instead of resetting their password.
@@ -651,6 +653,8 @@ Setting_Label_captcha.recaptcha.publicKey=reCAPTCHA Public Key
 Setting_Label_captcha.skip.cookie=Captcha Skip Cookie
 Setting_Label_captcha.skip.param=Captcha Skip Parameter Value
 Setting_Label_cas.clearPassUrl=CAS ClearPass URL
+Setting_Label_cas.clearPass.key=CAS ClearPass Encryption Key
+Setting_Label_cas.clearPass.alg=CAS ClearPass Algorithm
 Setting_Label_challenge.allowDuplicateResponses=Allow Duplicate Responses
 Setting_Label_challenge.allowSetup.queryMatch=Save Challenge Permission
 Setting_Label_challenge.allowUnlock=Allow Unlock
