config category reorganization

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -111,10 +111,10 @@ Category_Label_AUDIT_FORWARD=Audit Forwarding
 Category_Label_AUDITING=Auditing
 Category_Label_CAPTCHA=Captcha
 Category_Label_CAS_SSO=CAS SSO
-Category_Label_CHALLENGE=Challenge Settings
+Category_Label_CHALLENGE=Setup Security Questions
 Category_Label_CHALLENGE_POLICY=Challenge Policies
 Category_Label_CHANGE_PASSWORD=Change Password
-Category_Label_CLUSTERING=Clustering
+Category_Label_CLUSTERING=Session Management
 Category_Label_DATABASE=Database (Remote)
 Category_Label_DATABASE_ADV=Advanced
 Category_Label_DATABASE_SETTINGS=Connection
@@ -463,8 +463,8 @@ Setting_Description_password.policy.allowNumeric=Allow numeric characters in pas
 Setting_Description_password.policy.allowSpecial=Allow special (non alpha-numeric) characters in password.
 Setting_Description_password.policy.caseSensitivity=Controls if the password is case sensitive.  In most cases, this can be read from the directory, but in some cases this value is not able to correctly read, so you may override it here.
 Setting_Description_password.policy.changeMessage=Message to be displayed to user during password changes.  May include HTML markup.  This setting may be overwritten by a change password message read as part of an ldap password policy.
-Setting_Description_password.policy.charGroup.minimumMatch=
-Setting_Description_password.policy.charGroup.regExValues=
+Setting_Description_password.policy.charGroup.minimumMatch=The number of regular expiression matches defined in the setting <code>@PwmSettingReference\:password.policy.charGroup.regExValues@</code>.
+Setting_Description_password.policy.charGroup.regExValues=A list of regular expression character matches.  Along with the setting <code>@PwmSettingReference\:password.policy.charGroup.minimumMatch@</code>, this setting allows creating a complex list of requirements that the user will only need to partially match.  For example, this type of policy could be used to replicate Active Directory's "3 out of 5" rules, but with more flexibility and customization.
 Setting_Description_password.policy.checkWordlist=Check the password against the configured Wordlist.
 Setting_Description_password.policy.disallowCurrent=Prohibit current password from being used as new password.  Note that this can only be enforced if the login method permits the user's password to be known.
 Setting_Description_password.policy.disallowedAttributes=A list of attributes not allowed to be used as passwords.  For a given user, the values will be read and will not be permitted to be used as part of the password value.  This check is case insensitive.  Note: specifying a number after the attribute name will restrict how many consecutive characters in the value are disallowed (i.e. "Language:4" means the password can't contain: "Engl", "ngli", "glis", or "lish", for English speaking users).
@@ -1052,7 +1052,7 @@ Setting_Label_sms.requestId.length=Request ID Length
 Setting_Label_sms.responseOkRegex=Response Regular Expressions
 Setting_Label_sms.senderID=SMS Sender ID
 Setting_Label_sms.successResultCodes=Successful HTTP Result Codes
-Setting_Label_sms.userSmsAttribute=SMS Destintion Address LDAP Attribute
+Setting_Label_sms.userSmsAttribute=SMS Destination Address LDAP Attribute
 Setting_Label_sms.useUrlShortener=Use URL Shortener
 Setting_Label_template.ldap=LDAP Vendor Default Settings
 Setting_Label_template.storage=Storage Default Settings
@@ -1091,3 +1091,7 @@ Setting_Label_helpdesk.verification.form=Helpdesk Verificiation Form
 Setting_Description_helpdesk.verification.formHelpdesk Verificiation Form
 Category_Description_WORDLISTS=Word Lists
 Category_Label_WORDLISTS=Word Lists
+Category_Description_MODULES_PUBLIC=Public
+Category_Description_MODULES_PRIVATE=Authenticated
+Category_Label_MODULES_PUBLIC=Public
+Category_Label_MODULES_PRIVATE=Authenticated
