--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -311,7 +311,7 @@ Field_ChaiAPIVersion=Chai API Version
 EventLog_Narrative_Startup=@PwmAppName@ has started up
 EventLog_Narrative_Shutdown=@PwmAppName@ has been shutdown
 EventLog_Narrative_FatalEvent=A fatal event has occurred; data: %message%
-EventLog_Narrative_ModifyConfiguration=%perpetratorID% (%perpetratorDN%) has modified the configuration
+EventLog_Narrative_ModifyConfiguration=Configuration has been modified, changes: %message%
 EventLog_Narrative_IntruderAttempt=Non user-specific intruder attempt (Details: %message%)
 EventLog_Narrative_IntruderLockout=Non user-specific intruder lockout (Details: %message%)
 EventLog_Narrative_ActivateUser=%perpetratorID% (%perpetratorDN%) has activated their account
