Spelling fixes and environent reference doc updates

--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -298,7 +298,7 @@ Title_UserActivity=User Activity
 Title_DataAnalysis=Data Analysis
 Title_Dashboard=Dashboard
 Title_LogViewer=Log Viewer
-Title_TokenLookup=Token Lookup
+Title_TokenLookup=Token Search
 Title_URLReference=URL Reference
 MenuItem_ConfigEditor=Configuration Editor
 MenuItem_ConfigManager=Configuration Manager
