--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -346,7 +346,7 @@ Setting_Description_helpdesk.setPassword.mode=Mode to allow Help Desk administra
 Setting_Description_helpdesk.setPassword.writeAttributes=Actions to execute after a Help Desk actor modifies the user's password.  Macros may be used.
 Setting_Description_helpdesk.token.sendMethod=Set the method(s) used for sending the token code to the user.
 Setting_Description_helpdesk.useProxy=Use the application proxy connection for all actions initiated in the Help Desk module.  When disabled, actions are initiated using the logged in user's ldap connection, requiring that the user have appropriate privileges in the ldap directory.
-Setting_Description_helpdesk.verificationMethods=Verification methods that can be used by helpdesk operators to confirm the identity of a user.  Any method that is set to required or optional will be available to the helpdesk operator.  If one or more methods are set to required, at least one of the required methods will need to be successfully completed before the user detail can be viewed by the helpdesk operator.
+Setting_Description_helpdesk.verificationMethods=Verification methods that can be used by Help Desk operators to confirm the identity of a user.  Any method that is set to required or optional will be available to the Help Desk operator.  If one or more methods are set to required, at least one of the required methods will need to be successfully completed before the user detail can be viewed by the Help Desk operator.
 Setting_Description_helpdesk.viewStatusValues=Select the fields that are available to help desk administrators to view the status of the users.
 Setting_Description_http.proxy.url=The url of the HTTP proxy server.  If blank, no proxy server will be used.<ul><li>For http proxy server, use "<i>http\://serverame\:3128</i>" format</li><li>For authenticated proxy server, use the "<i>http\://username\:password@servername\:3128</i>" format</ul></li><br/>
 Setting_Description_idleTimeoutSeconds=Number of seconds after which an authenticated session becomes unauthenticated.  Minimum value is 60 seconds.
@@ -463,7 +463,7 @@ Setting_Description_password.policy.allowNumeric=Allow numeric characters in pas
 Setting_Description_password.policy.allowSpecial=Allow special (non alpha-numeric) characters in password.
 Setting_Description_password.policy.caseSensitivity=Controls if the password is case sensitive.  In most cases, this can be read from the directory, but in some cases this value is not able to correctly read, so you may override it here.
 Setting_Description_password.policy.changeMessage=Message to be displayed to user during password changes.  May include HTML markup.  This setting may be overwritten by a change password message read as part of an ldap password policy.
-Setting_Description_password.policy.charGroup.minimumMatch=The number of regular expiression matches defined in the setting <code>@PwmSettingReference\:password.policy.charGroup.regExValues@</code>.
+Setting_Description_password.policy.charGroup.minimumMatch=The number of regular expression matches defined in the setting <code>@PwmSettingReference\:password.policy.charGroup.regExValues@</code>.
 Setting_Description_password.policy.charGroup.regExValues=A list of regular expression character matches.  Along with the setting <code>@PwmSettingReference\:password.policy.charGroup.minimumMatch@</code>, this setting allows creating a complex list of requirements that the user will only need to partially match.  For example, this type of policy could be used to replicate Active Directory's "3 out of 5" rules, but with more flexibility and customization.
 Setting_Description_password.policy.checkWordlist=Check the password against the configured Word List.
 Setting_Description_password.policy.disallowCurrent=Prohibit current password from being used as new password.  Note that this can only be enforced if the login method permits the user's password to be known.
@@ -827,7 +827,7 @@ Setting_Label_ldap.ad.proxyForgotten=Use Proxy When Password Forgotten
 Setting_Label_ldap.defaultObjectClasses=User Object Class
 Setting_Label_ldap.duplicateMode=LDAP Duplicate Mode
 Setting_Label_ldap.edirectory.cr.applyWordlist=eDirectory Challenge Set Apply Word List
-Setting_Label_ldap.edirectory.cr.maxQuestionCharsInAnswer=eDirectory Challenge Set Maximum Question Chars In Answer
+Setting_Label_ldap.edirectory.cr.maxQuestionCharsInAnswer=eDirectory Challenge Set Maximum Question Characters In Answer
 Setting_Label_ldap.edirectory.cr.minRandomDuringSetup=eDirectory Challenge Set Minimum Randoms During Setup
 Setting_Label_ldap.edirectory.enableNmas=Enable NMAS Extensions
 Setting_Label_ldap.edirectory.readChallengeSets=Read eDirectory Challenge Sets
