delete account module

--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -342,3 +342,4 @@ EventLog_Narrative_RecoverPassword=%perpetratorID% (%perpetratorDN%) has verifie
 EventLog_Narrative_SetupResponses=%perpetratorID% (%perpetratorDN%) has saved their own stored responses
 Eventlog_Narrative_SetupOtpSecret=%perpetratorID% (%perpetratorDN%) has completed an OTP enrollment
 EventLog_Narrative_UpdateProfile=%perpetratorID% (%perpetratorDN%) has updated their profile data
+EventLog_Narrative_DeleteAccount=%perpetratorID% (%perpetratorDN%) has deleted their own account
