--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -80,6 +80,7 @@ Display_CommunicationError=Unable to communicate with server.  Continue when rea
 Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In you are unable to remember your password, you will be able to access your account by supplying the answers to these security questions.
 Display_Day=day
 Display_Days=days
+Display_DeleteUserConfirm=Are you sure you wish to delete your account?  This can not be undone.
 Display_ErrorBody=An error has occurred. Please close your browser and try again later.  If this error occurs repeatedly, please contact your help desk.
 Display_ErrorReference=error reference %1%
 Display_ExpirationDate=Account expiration date (maximum %1% days)
@@ -255,6 +256,7 @@ Long_Title_Shortcuts=Personalized shortcuts.
 Long_Title_UpdateProfile=Update your user profile data.
 Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
 Long_Title_UserInformation=Information about your password and password policies.
+Long_Title_DeleteAccount=Remove your account and profile from this service
 Long_Title_VerificationSend=Before this user can be selected, the user's identity must be verified.  Please select a verification method.
 Title_AnsweredQuestions=Answered Questions
 Title_ActivateUser=Activate Account
@@ -302,6 +304,7 @@ Title_UserEventHistory=Password History
 Title_UserInformation=My Account
 Title_ValidateCode=Validate Code
 Title_VerificationSend=Select verification method
+Title_DeleteAccount=Delete My Account
 Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your password. Try the following to make your password stronger:<ul><li>Make the password longer</li><li>Do not repeat letters or numbers</li><li>Use mixed (upper and lower) case letters</li><li>Add more numbers</li><li>Add more symbol characters</li></ul>
 Confirm_DeleteUser=Are you sure you wish to proceed?  If you continue, the selected user will be deleted permanently.  This can not be undone.
 Confirm=Are you sure you wish to proceed?
