--- a/src/main/resources/password/pwm/i18n/Message.properties
+++ b/src/main/resources/password/pwm/i18n/Message.properties
@@ -54,6 +54,7 @@ EventLog_RecoverPassword=Recover Forgotten Password
 EventLog_SetupResponses=Setup Password Responses
 Eventlog_SetupOtpSecret=Setup OTP Secret
 EventLog_UpdateProfile=Update Attributes
+EventLog_DeleteAccount=Delete Account
 Requirement_ADComplexity=Must have at least three types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li></ul>
 Requirement_ADComplexity2008=Must have at least %1% types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li><li>Other language characters not listed above</li></ul>
 Requirement_AllowNumeric=Must not include any numeric characters.
