--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1081,13 +1081,8 @@ Setting_Label_webservices.queryMatch=External Web Services Permissions
 Setting_Label_webservices.thirdParty.queryMatch=Web Services Third Party Permissions
 Setting_Label_webservice.userAttributes=Web Service User Attributes
 Setting_Label_wordlistCaseSensitive=Word List Case Sensitivity
-
-
 Setting_Description_updateAttributes.email.verification=If true, an email will be sent to the user's email address before the account is updated.  The user must verify receipt of the email before the account will be updated.
 Setting_Description_updateAttributes.sms.verification=If true, an SMS will be sent to the user's mobile phone number before the account is updated.  The user must verify receipt of the SMS before the account will be updated.
-
-
-
 Setting_Label_helpdesk.verification.form=Verification Attributes
 Setting_Description_helpdesk.verification.form=Attributes used for <i>LDAP Attributes</i> on the setting <code>@PwmSettingReference\:helpdesk.verificationMethods@</code>.
 Category_Description_WORDLISTS=Word Lists
@@ -1096,3 +1091,26 @@ Category_Description_MODULES_PUBLIC=Public
 Category_Description_MODULES_PRIVATE=Authenticated
 Category_Label_MODULES_PUBLIC=Public
 Category_Label_MODULES_PRIVATE=Authenticated
+Category_Label_DELETE_ACCOUNT_SETTINGS=Settings
+Category_Description_DELETE_ACCOUNT_SETTINGS=Settings
+Category_Label_DELETE_ACCOUNT_PROFILE=Profiles
+Category_Description_DELETE_ACCOUNT_PROFILE=Profiles
+Category_Label_DELETE_ACCOUNT=Delete Account
+Category_Description_DELETE_ACCOUNT=Delete Account
+Setting_Label_deleteAccount.profile.list=Delete Account Profiles
+Setting_Description_deleteAccount.profile.list=List of Delete Account profiles.  In most cases, only a single profile is needed.  Only define multiple profiles if different user populations users will need different features/permissions.  Each profile has a <i>Delete Account Profile Match</i> setting used to define to whom the profile applies.  If multiple profiles could apply for a user, the first profile in the list defined here will be assigned.
+Setting_Label_deleteAccount.permission=Delete Account Profile Match
+Setting_Description_deleteAccount.permission=This setting is used to define the set of users for which this profile applies.
+Setting_Label_deleteAccount.enable=Enable Delete Account
+Setting_Description_deleteAccount.enable=Enable the delete account module.
+Setting_Label_deleteAccount.agreement=Delete Account Agreement
+Setting_Description_deleteAccount.agreement=<p>Message to display to user before being allowed to delete their account. If blank, the delete account user agreement page will not be displayed to the user. This message may include HTML tags.
+Setting_Label_deleteAccount.deleteEntry=Delete LDAP Entry
+Setting_Description_deleteAccount.deleteEntry=Control if the user's LDAP entry is actually deleted in the LDAP directory.  In many cases its desirable to not actually delete the LDAP entry, but instead disable the account and take other actions via the Pre-Delete Actions.
+Setting_Label_deleteAccount.actions=Pre-Delete Actions
+Setting_Description_deleteAccount.actions=Actions to execute during the user deletion process.  These actions will execute prior to the actual LDAP entry is deleted (if so configured).  Typically these actions are used to disable the LDAP account and trigger some type of process that will result in an eventual deletion.
+Setting_Label_deleteAccount.nextUrl=Next URL
+Setting_Description_deleteAccount.nextUrl=URL to send user to after deletion.  If blank, the normal logout handling will occur.
+
+
+
