--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1111,6 +1111,7 @@ Setting_Label_deleteAccount.actions=Pre-Delete Actions
 Setting_Description_deleteAccount.actions=Actions to execute during the user deletion process.  These actions will execute prior to the actual LDAP entry is deleted (if so configured).  Typically these actions are used to disable the LDAP account and trigger some type of process that will result in an eventual deletion.
 Setting_Label_deleteAccount.nextUrl=Next URL
 Setting_Description_deleteAccount.nextUrl=URL to send user to after deletion.  If blank, the normal logout handling will occur.
-
+Setting_Label_events.audit.maxEvents=LocalDB Audit Events Storage Max Events
+Setting_Description_events.audit.maxEvents=Maximum count of events of the local audit event log.  Default is 1000000.
 
 
