further test user health check improvements

--- a/src/main/resources/password/pwm/i18n/Health.properties
+++ b/src/main/resources/password/pwm/i18n/Health.properties
@@ -27,8 +27,8 @@ HealthMessage_LDAP_ProxyTestSameUser=%1% setting is the same value as the %2% se
 HealthMessage_LDAP_TestUserUnavailable=LDAP unavailable error while testing ldap test user %1%, error: %2%
 HealthMessage_LDAP_TestUserUnexpected=Unexpected error while testing ldap test user %1%, error: %2%
 HealthMessage_LDAP_TestUserError=error verifying test user account %1%, error: %2%
-HealthMessage_LDAP_TestUserPolicyError=unexpected policy error while writing test user temporary random password for %1%, error: %2%
-HealthMessage_LDAP_TestUserNoTempPass=unable to read or write test user password temporary value for %1%
+HealthMessage_LDAP_TestUserWritePwError=Error while setting test user password: %1%; check proxy user LDAP permissions
+HealthMessage_LDAP_TestUserReadPwError=Setting %1% is enabled, however unable to read test user %2% password due to error %3%; check eDirectory proxy user LDAP permissions and eDirectory password policy configurations
 HealthMessage_LDAP_TestUserOK=LDAP test user account is functioning normally for profile %1%
 HealthMessage_LDAP_AD_Unsecure=%1% is not configured as a secure connection.  Active Directory requires a secure connection to allow password changes.
 HealthMessage_LDAP_AD_StaticIP=%1% should be configured using a dns hostname instead of an IP address.  Active Directory can sometimes have errors when using an IP address for configuration.
