multiple minor fixes

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1127,3 +1127,5 @@ Setting_Label_events.audit.maxEvents=LocalDB Audit Events Storage Max Events
 Setting_Description_events.audit.maxEvents=Maximum count of events of the local audit event log.  Default is 1000000.
 Setting_Description_updateAttributes.profile.list=Update Attributes Profiles
 Setting_Label_updateAttributes.profile.list=List of Update Attribute profiles.  In most cases, only a single profile is needed.  Only define multiple profiles if different user populations users will need different features/permissions.  Each profile has a <i>Update Attributes Profile Match</i> setting used to define to whom the profile applies.  If multiple profiles could apply for a user, the first profile in the list defined here will be assigned.
+Category_Description_INTERNAL=Internal Settings
+Category_Label_INTERNAL=Internal Settings
