idle handler and logout page improvements

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -94,13 +94,14 @@ Display_HelpdeskOtpValidation=Instruct the user to load their mobile authenticat
 Display_Hour=hour
 Display_Hours=hours
 Display_IdleTimeout=Idle Timeout:
-Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
+Display_IdleWarningMessage=Your session is about to timeout.  Please click anywhere on this page to resume.
 Display_IdleWarningTitle=Idle Timeout
 Display_JavascriptRequired=Javascript is required to view this page.
 Display_LeaveDirtyPasswordPage=If you leave this page, your password will not be changed.
 Display_Login=
 Display_LoginPasswordOnly=Please enter your password below.  Your current password is required to access this application.
-Display_Logout=<b>You are now signed out.</b><p/>Please close all internet browser windows before you try to sign in again.
+Display_Logout=You are now signed out.
+Display_LogoutPublic=Your session has timed out due to inactivity.
 Display_Minute=minute
 Display_Minutes=minutes
 Display_NAAF_PASSWORD=Please provide your NAAF authentication password.
@@ -274,6 +275,7 @@ Title_Helpdesk=Helpdesk
 Title_LocaleSelect=Locale Selection
 Title_Login=Please Sign in
 Title_Logout=Sign out
+Title_LogoutPublic=Inactive Timeout
 Title_MainPage=Main Menu
 Title_NewUser=New User Registration
 Title_OrgChart=Organizational Chart
