- refactoring and bugfixes - account info display ldap values -

--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -238,6 +238,7 @@ Field_VerificationMethodChallengeResponses=Secret Questions and Answers
 Field_VerificationMethodAttributes=Personal Data
 Field_VerificationMethodRemoteResponses=External Responses
 Field_VerificationMethodNAAF=Advanced Authentication
+Field_VerificationMethodOAuth=External Authentication
 Field_Placeholder_Answer=Answer
 Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
 Long_Title_Admin=Administrative functions
@@ -302,6 +303,7 @@ Title_TitleBarAuthenticated=@User:ID@  Password Self Service
 Title_TitleBar=Password Self Service
 Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
+Title_UserData=My Data
 Title_UserEventHistory=Password History
 Title_UserInformation=My Account
 Title_ValidateCode=Validate Code
