--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -83,6 +83,8 @@ Category_Description_PROFILES=Profiles
 Category_Description_RECOVERY=Policies for forgotten password configuration.
 Category_Description_RECOVERY_PROFILE=Policies for forgotten password configuration.
 Category_Description_RECOVERY_SETTINGS=Settings for forgotten password configuration.
+Category_Description_RECOVERY_DEF=Definition
+Category_Description_RECOVERY_OAUTH=OAuth
 Category_Description_REPORTING=Options to enable and configure reporting.
 Category_Description_REST_CLIENT=
 Category_Description_REST_SERVER=
@@ -168,6 +170,8 @@ Category_Label_PROFILES=Policies
 Category_Label_RECOVERY=Forgotten Password
 Category_Label_RECOVERY_PROFILE=Profiles
 Category_Label_RECOVERY_SETTINGS=Settings
+Category_Label_RECOVERY_DEF=Definition
+Category_Label_RECOVERY_OAUTH=OAuth
 Category_Label_REPORTING=Reporting
 Category_Label_REST_CLIENT=REST Clients
 Category_Label_REST_SERVER=REST Services
@@ -1129,3 +1133,19 @@ Setting_Description_updateAttributes.profile.list=Update Attributes Profiles
 Setting_Label_updateAttributes.profile.list=List of Update Attribute profiles.  In most cases, only a single profile is needed.  Only define multiple profiles if different user populations users will need different features/permissions.  Each profile has a <i>Update Attributes Profile Match</i> setting used to define to whom the profile applies.  If multiple profiles could apply for a user, the first profile in the list defined here will be assigned.
 Category_Description_INTERNAL=Internal Settings
 Category_Label_INTERNAL=Internal Settings
+Setting_Description_recovery.oauth.idserver.attributesUrl=Web service provided by the identity server to return attribute data about the user.
+Setting_Description_recovery.oauth.idserver.clientName=OAuth client ID.  This value will be provided by the OAuth identity service provider.
+Setting_Description_recovery.oauth.idserver.codeResolveUrl=OAuth Code Resolve Service URL.  This web service URL will be used to resolve the artifact returned by the OAuth identity server.
+Setting_Description_recovery.oauth.idserver.dnAttributeName=Attribute to request from the OAuth server to be used as the user name for local authentication.  This value will then be resolved the same as if the user had typed the password at the local authentication page.
+Setting_Description_recovery.oauth.idserver.loginUrl=OAuth server login URL.  This is the URL to redirect the user to for authentication.
+Setting_Description_recovery.oauth.idserver.secret=OAuth shared secret.  This value will be provided by the OAuth identity service provider.
+Setting_Description_recovery.oauth.idserver.serverCerts=Certificate for the OAuth web service server.
+Setting_Label_recovery.oauth.idserver.attributesUrl=OAuth Profile Service URL
+Setting_Label_recovery.oauth.idserver.clientName=OAuth Client ID
+Setting_Label_recovery.oauth.idserver.codeResolveUrl=OAuth Code Resolve Service URL
+Setting_Label_recovery.oauth.idserver.dnAttributeName=OAuth User Name/DN Login Attribute
+Setting_Label_recovery.oauth.idserver.loginUrl=OAuth Login URL
+Setting_Label_recovery.oauth.idserver.secret=OAuth Shared Secret
+Setting_Label_recovery.oauth.idserver.serverCerts=OAUTH Web Service Server Certificate
+Setting_Label_accountInfo.view.form=LDAP Display Attributes
+Setting_Description_accountInfo.view.form=LDAP attributes to show to user on account information page.
