sso basic auth enable setting and menu re-org

--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -181,7 +181,7 @@ Category_Label_SHORTCUT=Shortcut Menu
 Category_Label_SMS_GATEWAY=SMS Gateway
 Category_Label_SMS_MESSAGES=SMS Messages
 Category_Label_SMS=SMS
-Category_Label_SSO=Single Sign On
+Category_Label_SSO=Single Sign On (SSO) Client
 Category_Label_TELEMETRY=Telemetry
 Category_Label_TEMPLATES=Default Settings
 Category_Label_TOKEN=Tokens
@@ -1149,3 +1149,7 @@ Setting_Label_recovery.oauth.idserver.secret=OAuth Shared Secret
 Setting_Label_recovery.oauth.idserver.serverCerts=OAUTH Web Service Server Certificate
 Setting_Label_accountInfo.view.form=LDAP Display Attributes
 Setting_Description_accountInfo.view.form=LDAP attributes to show to user on account information page.
+Category_Description_BASIC_SSO=Basic Authentication
+Category_Label_BASIC_SSO=Basic Authentication
+Setting_Label_basicAuth.enable=Enable Basic Authentication
+Setting_Description_basicAuth.enable=Enable Basic Authentication
