--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -309,6 +309,9 @@ Title_UserInformation=My Account
 Title_ValidateCode=Validate Code
 Title_VerificationSend=Select verification method
 Title_DeleteAccount=Delete My Account
+Title_Management=Management
+Title_DirectReports=Direct Reports
+Title_Organization=Organization
 Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your password. Try the following to make your password stronger:<ul><li>Make the password longer</li><li>Do not repeat letters or numbers</li><li>Use mixed (upper and lower) case letters</li><li>Add more numbers</li><li>Add more symbol characters</li></ul>
 Confirm_DeleteUser=Are you sure you wish to proceed?  If you continue, the selected user will be deleted permanently.  This can not be undone.
 Confirm=Are you sure you wish to proceed?
